ACLOCAL_AMFLAGS=-I m4
pkgconfigdir=@pkgconfigdir@
pkgconfig_DATA=\
libstm32f10x_cl.pc\
libstm32f10x_hd.pc\
libstm32f10x_hd_vl.pc\
libstm32f10x_ld.pc\
libstm32f10x_ld_vl.pc\
libstm32f10x_md.pc\
libstm32f10x_md_vl.pc\
libstm32f30x.pc\
libstm32f37x.pc\
libstm32f40x.pc\
libstm32l1xx.pc
SUBDIRS=src 
EXTRA_DIST=autogen.mk
test: check


