includedir=$(prefix)/include/stm32/f30x/
include_HEADERS=\
stm32f30x_adc.h \
stm32f30x_can.h \
stm32f30x_comp.h \
stm32f30x_crc.h \
stm32f30x_dac.h \
stm32f30x_dbgmcu.h \
stm32f30x_dma.h \
stm32f30x_exti.h \
stm32f30x_flash.h \
stm32f30x_gpio.h \
stm32f30x_i2c.h \
stm32f30x_iwdg.h \
stm32f30x_misc.h \
stm32f30x_opamp.h \
stm32f30x_pwr.h \
stm32f30x_rcc.h \
stm32f30x_rtc.h \
stm32f30x_spi.h \
stm32f30x_syscfg.h \
stm32f30x_tim.h \
stm32f30x_usart.h \
stm32f30x_wwdg.h 

lib_LTLIBRARIES=libstm32f30x.la 

libstm32f30x_la_SOURCES=\
startup_stm32f30x.S \
stm32f30x_adc.c \
stm32f30x_can.c \
stm32f30x_comp.c \
stm32f30x_crc.c \
stm32f30x_dac.c \
stm32f30x_dbgmcu.c \
stm32f30x_dma.c \
stm32f30x_exti.c \
stm32f30x_flash.c \
stm32f30x_gpio.c \
stm32f30x_i2c.c \
stm32f30x_iwdg.c \
stm32f30x_misc.c \
stm32f30x_opamp.c \
stm32f30x_pwr.c \
stm32f30x_rcc.c \
stm32f30x_rtc.c \
stm32f30x_spi.c \
stm32f30x_syscfg.c \
stm32f30x_tim.c \
stm32f30x_usart.c \
stm32f30x_wwdg.c 

libstm32f30x_la_CFLAGS=$(AM_CFLAGS) -I../CMSIS -std=c99 


