includedir=$(prefix)/include/stm32/f37x/
include_HEADERS=\
stm32f37x_adc.h \
stm32f37x_can.h \
stm32f37x_cec.h \
stm32f37x_comp.h \
stm32f37x_crc.h \
stm32f37x_dac.h \
stm32f37x_dbgmcu.h \
stm32f37x_dma.h \
stm32f37x_exti.h \
stm32f37x_flash.h \
stm32f37x_gpio.h \
stm32f37x_i2c.h \
stm32f37x_iwdg.h \
stm32f37x_misc.h \
stm32f37x_pwr.h \
stm32f37x_rcc.h \
stm32f37x_rtc.h \
stm32f37x_sdadc.h \
stm32f37x_spi.h \
stm32f37x_syscfg.h \
stm32f37x_tim.h \
stm32f37x_usart.h \
stm32f37x_wwdg.h 

lib_LTLIBRARIES=libstm32f37x.la 

libstm32f37x_la_SOURCES=\
stm32f37x_adc.c \
stm32f37x_can.c \
stm32f37x_cec.c \
stm32f37x_comp.c \
stm32f37x_crc.c \
stm32f37x_dac.c \
stm32f37x_dbgmcu.c \
stm32f37x_dma.c \
stm32f37x_exti.c \
stm32f37x_flash.c \
stm32f37x_gpio.c \
stm32f37x_i2c.c \
stm32f37x_iwdg.c \
stm32f37x_misc.c \
stm32f37x_pwr.c \
stm32f37x_rcc.c \
stm32f37x_rtc.c \
stm32f37x_sdadc.c \
stm32f37x_spi.c \
stm32f37x_syscfg.c \
stm32f37x_tim.c \
stm32f37x_usart.c \
stm32f37x_wwdg.c 

libstm32f37x_la_CFLAGS=$(AM_CFLAGS) -I../CMSIS -std=c99 


