includedir=$(prefix)/include/stm32/l1xx/
include_HEADERS=\
misc.h \
stm32l1xx_adc.h \
stm32l1xx_aes.h \
stm32l1xx_comp.h \
stm32l1xx_crc.h \
stm32l1xx_dac.h \
stm32l1xx_dbgmcu.h \
stm32l1xx_dma.h \
stm32l1xx_exti.h \
stm32l1xx_flash.h \
stm32l1xx_fsmc.h \
stm32l1xx_gpio.h \
stm32l1xx_i2c.h \
stm32l1xx_iwdg.h \
stm32l1xx_lcd.h \
stm32l1xx_opamp.h \
stm32l1xx_pwr.h \
stm32l1xx_rcc.h \
stm32l1xx_rtc.h \
stm32l1xx_sdio.h \
stm32l1xx_spi.h \
stm32l1xx_syscfg.h \
stm32l1xx_tim.h \
stm32l1xx_usart.h \
stm32l1xx_wwdg.h 

lib_LTLIBRARIES=libstm32l1xx.la 

libstm32l1xx_la_SOURCES=\
misc.c \
stm32l1xx_adc.c \
stm32l1xx_aes.c \
stm32l1xx_aes_util.c \
stm32l1xx_comp.c \
stm32l1xx_crc.c \
stm32l1xx_dac.c \
stm32l1xx_dbgmcu.c \
stm32l1xx_dma.c \
stm32l1xx_exti.c \
stm32l1xx_flash.c \
stm32l1xx_fsmc.c \
stm32l1xx_gpio.c \
stm32l1xx_i2c.c \
stm32l1xx_iwdg.c \
stm32l1xx_lcd.c \
stm32l1xx_opamp.c \
stm32l1xx_pwr.c \
stm32l1xx_rcc.c \
stm32l1xx_rtc.c \
stm32l1xx_sdio.c \
stm32l1xx_spi.c \
stm32l1xx_syscfg.c \
stm32l1xx_tim.c \
stm32l1xx_usart.c \
stm32l1xx_wwdg.c 

libstm32l1xx_la_CFLAGS=$(AM_CFLAGS) -I../CMSIS -std=c99 


